Use List/Set.of
Simpler than relying on Guava for this.
In the place wherever mutable collection was created with guava code
doesn't modify it so it should be fine to use an immutable one.